# mlx-audiogen

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
docs/superpowers/plans/: 2026-03-10-web-ui-catchup.md  2026-03-14-flywheel-intelligence.md  2026-03-14-library-scanner.md  2026-03-14-phase-9g3-web-enrichment-taste-engine.md
docs/superpowers/specs/: 2026-03-10-web-ui-catchup-design.md  2026-03-11-phase-7b-llm-prompt-enhancement-design.md  2026-03-13-lora-fine-tuning-design.md  2026-03-14-flywheel-intelligence-design.md  2026-03-14-phase-9g3-web-enrichment-taste-engine-design.md
mlx_audiogen/cli/: convert.py
mlx_audiogen/lora/: __init__.py  config.py  dataset.py  flywheel.py  inject.py  trainer.py
mlx_audiogen/models/: __init__.py
mlx_audiogen/models/demucs/: __init__.py  config.py  convert.py  layers.py  model.py  pipeline.py  spec.py  transformer.py
mlx_audiogen/models/musicgen/: convert.py  model.py  pipeline.py  transformer.py
mlx_audiogen/models/stable_audio/: pipeline.py  sampling.py
mlx_audiogen/server/: app.py
mlx_audiogen/shared/: audio_to_midi.py  prompt_suggestions.py  stem_separator.py
plugin/: CMakeLists.txt
plugin/Source/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
tests/: test_cloud_paths.py  test_demucs.py  test_enrichment.py  test_flywheel.py  test_library_api.py  test_library_models.py  test_lora_config.py  test_lora_dataset.py  test_lora_inject.py  test_lora_trainer.py  test_midi.py  test_parsers.py  test_phase6.py  test_phase7b.py  test_server.py
tests/fixtures/: apple_music_sample.xml  rekordbox_sample.xml
web/: package-lock.json
web/src/: App.tsx
web/src/api/: client.ts
web/src/components/: AudioPlayer.tsx  GenerateButton.tsx  Header.tsx  HistoryPanel.tsx  LoRASelector.tsx  ParameterPanel.tsx  SettingsPanel.tsx  SuggestPanel.tsx  TagAutocomplete.tsx  TrainPanel.tsx
web/src/hooks/: useServerHeartbeat.ts
web/src/store/: useStore.ts
web/src/types/: api.ts
