[project]
name = "mlx-audiogen"
version = "0.1.0"
description = "Music and audio generation on Apple Silicon using MLX - MusicGen and Stable Audio Open"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.11"
authors = [
    {name = "Jason Vassallo"}
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: MacOS :: MacOS X",
    "Topic :: Multimedia :: Sound/Audio",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: Apache Software License",
]

dependencies = [
    "mlx>=0.25.2",
    "numpy>=1.26.4",
    "huggingface-hub>=0.27.0",
    "transformers>=4.40.0",
    "safetensors>=0.4.0",
    "soundfile>=0.12.0",
    "sounddevice>=0.5.0",
    "tqdm>=4.66.0",
    "tokenizers>=0.19.0",
    "sentencepiece>=0.2.0",
    "defusedxml>=0.7",
]

[project.optional-dependencies]
convert = [
    "torch>=2.0.0",
]
server = [
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.27.0",
    "python-multipart>=0.0.18",
]
llm = [
    "mlx-lm>=0.22.0",
]
dev = [
    "pytest>=7.0.0",
    "ruff>=0.4.0",
]

[project.scripts]
mlx-audiogen = "mlx_audiogen.cli.generate:main"
mlx-audiogen-convert = "mlx_audiogen.cli.convert:main"
mlx-audiogen-server = "mlx_audiogen.server:main"
mlx-audiogen-app = "mlx_audiogen.server:launch_app"
mlx-audiogen-train = "mlx_audiogen.cli.train:main"

[project.urls]
Homepage = "https://github.com/jasonvassallo/mlx-audiogen"
Repository = "https://github.com/jasonvassallo/mlx-audiogen"
HuggingFace = "https://huggingface.co/jasonvassallo/mlx-audiogen"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.mypy]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "integration: heavyweight tests requiring real model weights and GPU (deselect with '-m not integration')",
]

[dependency-groups]
dev = [
    "bandit>=1.9.4",
    "mypy>=1.19.1",
    "pip-audit>=2.10.0",
    "pytest>=9.0.2",
]
